# regression-mlp

./: README.md  pyproject.toml
lecture_pytest/: pyproject.toml
lecture_pytest/src/lecture_pytest/: __init__.py
lecture_pytest/tests/: test_3.py
numbers/: pyproject.toml
numbers/src/numbers/: greet.py
report/regression_mlp/: pyproject.toml
report/regression_mlp/src/regression_mlp/: __init__.py  data.py  model.py  train.py
report/regression_mlp/tests/: test_model.py
