[project]
name = "devcontainer-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Koki Yamada", email = "k-yamada@go.tuat.ac.jp" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
devcontainer-lecture = "devcontainer_lecture:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "numbers",
    "lecture_pytest",
    "report/regression_mlp",
]
