[project]
name = "lecture-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryo ka", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
]

[project.scripts]
lecture-pytest = "lecture_pytest:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
